# image-search

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.agents/workflows/: commit-python.md
alembic/: env.py
alembic/versions/: 001_create_image_embeddings.py  002_unify_caption_embedding_dim.py  003_add_user_id_index.py
docker/: docker-compose.local.yml
docs/: proposal-template.md  use-case-catalog.md  use-case-template.md
docs/architectures/: data-event-flow.md  image-search.md  rag-hybrid-question-generation.md  system-overview.md  text-to-speech.md
docs/proposals/: proposal-beekid-ai-features.md
docs/specs/image-search/: IS-001-database-schema.md  IS-002-redis-stream-events.md  (+13 more)
docs/use-cases/: uc-001-gemini-image-search.md  uc-002-text-to-speech.md  uc-003-ai-lesson-generator.md  uc-004-interactive-lesson.md  uc-005-template-overlay.md  uc-006-ai-lesson-list-generator.md  uc-007-drawing-game-practice.md  uc-008-drawing-game-create.md  uc-009-drawing-competition.md  use-case-catalog-beekid-ai.md
scripts/: mermaid_to_img.py
tests/: conftest.py  test_domain_entities.py  test_embedding_service.py  test_events.py  test_health.py  test_http_client.py  test_hybrid_caption_approach.py  test_ingest_worker.py  test_jina_service.py  test_logging_config.py  test_metrics.py  test_models.py  test_multimodal_rag_approach.py  test_pure_clip_approach.py  test_redis_event_bus.py  test_repositories.py  test_search_api.py  test_siglip_service.py  test_upload_api.py
tools/: lark-mcp.cmd
(+34 files in other folders)
