[project]
name = "image-search"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "structlog>=24.0",
    "prometheus-client>=0.21",
    "httpx>=0.27",
    "minio>=7.2.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
ai = [
    "torch>=2.4",
    "transformers>=4.45",
    "pillow>=10.0",
    "google-generativeai>=0.8",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.mypy]
python_version = "3.12"
strict = true
